--- a/src/app/components/employee-list/employee-list.component.html
+++ b/src/app/components/employee-list/employee-list.component.html
@@ -36,6 +36,15 @@
       <th mat-header-cell *matHeaderCellDef> Department </th>
       <td mat-cell *matCellDef="let element"> {{element.department}} </td>
     </ng-container>
+
+    <ng-container matColumnDef="empty">
+      <th mat-header-cell *matHeaderCellDef> </th>
+      <td mat-cell *matCellDef="let element"> <button mat-button color="primary" [routerLink]="['/edit/',element.id]">View</button> </td>
+    </ng-container>
+
+
+
+
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
