--- a/src/app/components/edit-employee/edit-employee.component.html
+++ b/src/app/components/edit-employee/edit-employee.component.html
@@ -1,6 +1,6 @@
 <h2> Edit Employee </h2>
 
-<form class="example-form" #AddForm ="ngForm">
+<form class="example-form" #AddForm ="ngForm" (ngSubmit)="editEmployee()">
     
   <mat-form-field class="example-full-width">
     <mat-label> ID. </mat-label>
@@ -32,5 +32,6 @@
     id="departmet" name="department" [(ngModel)] = "employe.department" />
   </mat-form-field>
 
-  <button mat-raised-button color="primary"  type="submit"> Save </button>
+  <button mat-raised-button color="primary"  type="submit"> UpDate </button>
+  <button mat-raised-button color="warn"  (click)="deleteEmployee()"> Delete </button>
 </form>
