--- a/src/app/components/add-employee/add-employee.component.html
+++ b/src/app/components/add-employee/add-employee.component.html
@@ -1,6 +1,7 @@
 <h2>Add New Employee</h2>
+<app-add-edit></app-add-edit>
 
-<form class="example-form" #AddForm = "ngForm"  (ngSubmit)="addEmployee()">
+<!-- <form class="example-form" #AddForm = "ngForm"  (ngSubmit)="addEmployee()">
   <mat-form-field class="example-full-width">
     <mat-label> Name </mat-label>
     <input matInput placeholder="Name" value =" Name " 
@@ -18,7 +19,7 @@
     <span matPrefix>+92 &nbsp;</span>
     <input type="tel" matInput placeholder="555-555-1234"  ngModel />
     <mat-icon matSuffix>mode_edit</mat-icon>
-  </mat-form-field> -->
+  </mat-form-field> 
 
   <mat-form-field class="example-full-width">
     <mat-label>Salary</mat-label>
@@ -33,4 +34,4 @@
   </mat-form-field>
 
   <button mat-raised-button color="primary"  type="submit"> Save </button>
-</form>
+</form> -->
