--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,8 @@
+.body{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 .example-spacer {
     flex: 1 1 auto;
   }
@@ -5,5 +10,9 @@
   .container{
     width: 80%;
     margin: auto;
-    padding: 10px;
+    
+  }
+  .footer{
+    padding-top: 10px;
+    
   }
