--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,21 @@
-<header>
-  <mat-toolbar color="primary">
-    <span>EMS</span>
-    <span class="example-spacer"></span>
-    <button mat-button routerLink="employee">Employees</button>
-    <button mat-button routerLink="Add-employee">Add Employee</button>
-    <span class="example-spacer"></span>
-  </mat-toolbar>
-</header>
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
-<footer>
-  <mat-toolbar color="primary">
-    <span class="example-spacer"></span>
-    <button mat-button>Footer</button>
-    <span class="example-spacer"></span>
-  </mat-toolbar>
-</footer>
+ <div class="body">
+  <header>
+    <mat-toolbar color="primary">
+      <span>EMS</span>
+      <span class="example-spacer"></span>
+      <button mat-raised-button color="primary"  routerLink="employee">Employees</button>
+      <button mat-raised-button color="primary" routerLink="Add-employee">Add Employee</button>
+      <span class="example-spacer"></span>
+    </mat-toolbar>
+  </header>
+    <div class="container">
+      <router-outlet></router-outlet>
+    </div>
+  <footer class="footer">
+    <mat-toolbar color="primary">
+      <span class="example-spacer"></span>
+      <button mat-raised-button color="primary" >Footer</button>
+      <span class="example-spacer"></span>
+    </mat-toolbar>
+  </footer>
+</div>
